# encrypted-spaces

./: .dockerignore  .gitignore  Cargo.toml  NOTICE  PATCHES.md  README.md  rust-toolchain.toml
.github/actions/setup-rust-ci/: action.yml
.github/scripts/: affected_crates.py  ci_matrix.json  prepare-encrypted-spaces-guest-bundle.py
.github/workflows/: build-prototype.yml  lint-prototype.yml  release-bridge.yml  release-publish.yml  upstream-compat.yml  upstream-sync.yml
backend/: Cargo.toml  build.rs
backend/acl-types/: Cargo.toml
backend/acl-types/src/: ast_build.rs  lib.rs  predicate.pest
backend/benches/: storage_benchmarks.rs
backend/server/: Cargo.toml  Dockerfile  README.md
backend/server/certs/: README.md
backend/server/src/: app_config.rs  db.rs  file_store.rs  http.rs  key_delivery.rs  lib.rs  main.rs  tls.rs  websocket.rs
backend/src/: access_control.rs  app_schema.rs  error.rs  internal_schemas.kdl  internal_schemas.rs  lib.rs  query.rs  schema.rs  schema_kdl.rs  sign_change.rs  space_id.rs  storage.rs
backend/src/merk_storage/: keys.rs  mod.rs  pretty_print.rs  proofs.rs  test_helpers.rs  tuple.rs
backend/src/proto/: database.proto  mod.rs
backend/storage-encoding/: Cargo.toml
backend/storage-encoding/src/: id_validation.rs  keys.rs  lib.rs  stored_value.rs  tuple.rs
bridge/: Cargo.toml
bridge/src/: main.rs  protocol.rs  runtime.rs  schema.rs
bridge/tests/: runtime.rs  stdio.rs
crypto/: Cargo.toml  README.md
crypto/benches/: pke.rs
crypto/src/: algebraic_encoding.rs  encryption.rs  error.rs  key_derivation.rs  key_material.rs  lib.rs  pke.rs  serde_helpers.rs  signature.rs
crypto/src/hash/: mod.rs
crypto/src/key_derivation/: poseidon2.rs
crypto/src/pke/: mlkem.rs  ristretto255.rs  tests.rs  xwing.rs  xwing_ristretto255.rs
crypto/src/signature/: ed25519.rs  mldsa.rs
demos/tauri/: .gitignore  README.md  app_schema.kdl  demo_launcher.py  next.config.mjs  package-lock.json  package.json
demos/tauri/app/: globals.css  layout.tsx  page.tsx
demos/tauri/components/: calendar.tsx  (+11 more)
demos/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
demos/tauri/src-tauri/capabilities/: default.json
demos/tauri/src-tauri/src/: broadcast.rs  calendar.rs  chat.rs  commands.rs  files.rs  lib.rs  main.rs  notes.rs  state.rs  tasks.rs
demos/tauri/test-harness/: Cargo.toml
demos/tauri/test-harness/scenarios/: demo.json  long-10-actor.json
demos/tauri/test-harness/src/: action.rs  actor.rs  fuzz.rs  lib.rs  runner.rs  world.rs
demos/tauri/test-harness/tests/: harness_smoke.rs
docs/: actions.md  schema.md
ffproof/: CUDA.md  Cargo.toml  prebuilt_guest.rs
ffproof/changelog_core/: Cargo.toml  README.md
ffproof/changelog_core/src/: changelog.rs  lib.rs  mmr_tree.rs  time.rs
ffproof/changelog_core/src/ops/: action_op.rs  create_space_op.rs  delete_op.rs  extend_op.rs  insert_op.rs  invite_user_op.rs  list_op.rs  mod.rs  op_tests.rs  reduce_op.rs  refresh_keys_op.rs  rekey_op.rs  remove_user_op.rs  update_op.rs
ffproof/changelog_test_utils/: Cargo.toml
ffproof/client_methods/: Cargo.toml
ffproof/client_methods/guest/: Cargo.toml
ffproof/integration_tests/: Cargo.toml  README.md
ffproof/methods/: Cargo.toml  build.rs
ffproof/methods_bench/: Cargo.toml
ffproof/src/: common.rs  lib.rs  nextest_cuda_guard.rs  prover.rs  verifier.rs
ffproof/tracer/: Cargo.toml
ffproof/tracer/methods/: Cargo.toml  build.rs
ffproof/tracer/methods/guest/: Cargo.toml
ffproof/tracer/shared/: Cargo.toml
ffproof/tracer/shared/src/: lib.rs  trace_verify.rs
ffproof/tracer/src/: extract.rs  json_loader.rs  lib.rs  main.rs  pruned.rs  tests.rs  trace_prove.rs  tracer.rs
ffproof/tracer/test_fixtures/: delete_1.json  delete_10.json  delete_100.json  delete_25.json  delete_50.json  delete_unique_1.json  delete_unique_10.json  delete_unique_100.json  delete_unique_25.json  delete_unique_50.json  insert_1.json  insert_100.json  insert_50.json  insert_unique_10.json  insert_unique_25.json  mixed_1.json  mixed_10.json  mixed_100.json  mixed_25.json  mixed_50.json  read_1.json  read_10.json  read_100.json  read_25.json  read_50.json  read_prefix_1.json  read_prefix_10.json  read_prefix_100.json  read_prefix_25.json  read_prefix_50.json  read_range_1.json  read_range_10.json  read_range_100.json  read_range_25.json  read_range_50.json  serial_1.json  serial_1000.json  serial_1000_n100.json  serial_1000_n1000.json  serial_2000.json  (+18 more)
ffproof/tracer/tools/: gen_input.py  run_comparison.sh
key_manager/: Cargo.toml
key_manager/src/: error.rs  lib.rs  no_retention.rs  operation.rs  traits.rs  types.rs
retention/: Cargo.toml  Config.toml
retention/src/: error.rs  lib.rs
retention/src/simple_line2/: mod.rs  proof.rs  space_key.rs  stark_proofs.rs  store.rs
retention/src/simple_line2/tests/: mod.rs  space_key_tests.rs  store_tests.rs  sync_recover_tests.rs
scripts/: run_mve_demos.sh  xwing_test_vectors.py
sdk/: Cargo.toml  README.md
sdk/codegen/: Cargo.toml
sdk/examples/: basic_local.rs  basic_ws.rs  pagination.rs  tables.rs  task_list.rs  textarea.rs
sdk/src/: action.rs  authentication.rs  broadcast.rs  cache.rs  changelog.rs  crypto.rs  file.rs  key_manager.rs  lib.rs  list.rs  local_transport.rs  retention.rs  schema.rs  state.rs  table.rs  testing.rs  textarea.rs  tls_trust.rs  transport.rs  users.rs  websocket_transport.rs
sdk/tests/: numeric_roundtrip.rs
sdk_fuzzer/: Cargo.toml
sdk_fuzzer/src/: executor.rs  gen.rs  invariants.rs  lib.rs  main.rs  model.rs
sdk_fuzzer/tests/: smoke.rs
zkp/: Cargo.toml  README.md
zkp/.cargo/: config.toml
zkp/benches/: mve_poseidon.rs
zkp/src/: hash_preimage.rs  lib.rs  poseidon2.rs
zkp/src/demo/: derivation_trees.rs  mod.rs  mve.rs
zkp/src/demo/hash/: blake3_baby_bear.rs  blake3_koala_bear.rs  keccak_baby_bear.rs  keccak_koala_bear.rs  mod.rs  poseidon2_baby_bear.rs  poseidon2_koala_bear.rs
zkp/src/mve/: errors.rs  mod.rs  poseidon2.rs
zkp/src/transitions/: canonical_path.rs  mod.rs  relation.rs  witness.rs
zkp/tests/: test_hash_relation.rs  test_key_trees.rs
(+22 files in other folders)
