[package]
name = "encrypted-spaces-key-manager"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
encrypted-spaces-changelog-core = { workspace = true }
encrypted-spaces-crypto = { workspace = true }
encrypted-spaces-zkp = { workspace = true }
hkdf = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
