[package]
name = "encrypted-spaces-retention"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["real-proofs"]
real-proofs = []

[dependencies]
async-trait = { workspace = true }
encrypted-spaces-crypto = { workspace = true }
encrypted-spaces-changelog-core = { workspace = true }
encrypted-spaces-key-manager = { workspace = true }
encrypted-spaces-zkp = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
