[package]
name = "ffproof-tracer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
ffproof-tracer-methods = { path = "methods" }
ffproof-tracer-shared = { path = "shared" }

merk = {workspace = true}
risc0-zkvm = { workspace = true, features = ["client"] }
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
hex.workspace = true
clap.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng", "thread_rng"] }

