[package]
name = "encrypted-spaces-client-methods"
version = "0.1.0"
edition = "2021"


[package.metadata.risc0]
methods = ["guest"]

[workspace]

[dependencies]
# Guest crate has its own [workspace], so parent workspace deps aren't reachable.
risc0-zkvm = {version = "3.0.5", default-features = false, features = ["std"]}

[patch.crates-io]
# Route every crates.io `sha2` dependency through RISC Zero's accelerated
# fork so SHA-256 compress runs on the zkVM precompile instead of software.
# Patch the v0.10.9 tag because that is what risc0-zkvm 3.0.5 resolves to.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }

[profile.dev]
lto = "fat"

[profile.release]
lto = "fat"
