[package]
name = "ffproof-tracer-guest"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[workspace]

[dependencies]
ffproof-tracer-shared = { path = "../../shared" }
merk = { git = "https://github.com/encrypted-spaces/merk.git" }
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
postcard = { version = "1.1.3", features = ["alloc"] }
hex = "0.4"

[patch.crates-io]
# RISC0 SHA-256 accelerator support
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
